--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,214 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@layer utilities {
+  .wrapper {
+    @apply max-w-7xl  p-5 md:px-10 w-full lg:mx-auto;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .flex-start {
+    @apply flex justify-start items-center;
+  }
+
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+
+  .flex-between {
+    @apply flex justify-between items-center;
+  }
+
+  .h1-bold {
+    @apply font-bold text-3xl lg:text-4xl;
+  }
+
+  .h2-bold {
+    @apply font-bold text-2xl lg:text-3xl;
+  }
+
+  .h3-bold {
+    @apply font-bold text-xl lg:text-2xl;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme {
+  --color-background: oklch(100% 0 0);
+  --color-foreground: oklch(23.68% 0.032 265.75);
+  --color-card: oklch(100% 0 0);
+  --color-card-foreground: oklch(23.68% 0.032 265.75);
+  --color-popover: oklch(100% 0 0);
+  --color-popover-foreground: oklch(23.68% 0.032 265.75);
+  --color-primary: oklch(26.55% 0.024 265.75);
+  --color-primary-foreground: oklch(98.04% 0.005 265.75);
+  --color-secondary: oklch(96.08% 0.004 265.75);
+  --color-secondary-foreground: oklch(26.55% 0.024 265.75);
+  --color-muted: oklch(96.08% 0.004 265.75);
+  --color-muted-foreground: oklch(58.38% 0.019 265.75);
+  --color-accent: oklch(96.08% 0.004 265.75);
+  --color-accent-foreground: oklch(26.55% 0.024 265.75);
+  --color-destructive: oklch(62.76% 0.218 29.23);
+  --color-destructive-foreground: oklch(98.04% 0.005 265.75);
+  --color-border: oklch(89.84% 0.01 265.75);
+  --color-input: oklch(89.84% 0.01 265.75);
+  --color-ring: oklch(23.68% 0.032 265.75);
+  --color-chart-1: oklch(69.75% 0.154 35.18);
+  --color-chart-2: oklch(56.93% 0.091 192.64);
+  --color-chart-3: oklch(41.97% 0.053 228.74);
+  --color-chart-4: oklch(78.8% 0.137 91.72);
+  --color-chart-5: oklch(76.39% 0.17 45.51);
+  --radius: 0.5rem;
+}
+
+@theme dark {
+  --color-background: oklch(23.68% 0.032 265.75);
+  --color-foreground: oklch(98.04% 0.005 265.75);
+  --color-card: oklch(23.68% 0.032 265.75);
+  --color-card-foreground: oklch(98.04% 0.005 265.75);
+  --color-popover: oklch(23.68% 0.032 265.75);
+  --color-popover-foreground: oklch(98.04% 0.005 265.75);
+  --color-primary: oklch(98.04% 0.005 265.75);
+  --color-primary-foreground: oklch(26.55% 0.024 265.75);
+  --color-secondary: oklch(31.96% 0.028 265.75);
+  --color-secondary-foreground: oklch(98.04% 0.005 265.75);
+  --color-muted: oklch(31.96% 0.028 265.75);
+  --color-muted-foreground: oklch(71.19% 0.013 265.75);
+  --color-accent: oklch(31.96% 0.028 265.75);
+  --color-accent-foreground: oklch(98.04% 0.005 265.75);
+  --color-destructive: oklch(43.18% 0.163 29.23);
+  --color-destructive-foreground: oklch(98.04% 0.005 265.75);
+  --color-border: oklch(31.96% 0.028 265.75);
+  --color-input: oklch(31.96% 0.028 265.75);
+  --color-ring: oklch(83.61% 0.017 265.75);
+  --color-chart-1: oklch(56.77% 0.154 263.38);
+  --color-chart-2: oklch(58.5% 0.103 174.57);
+  --color-chart-3: oklch(66.96% 0.159 78.66);
+  --color-chart-4: oklch(70.49% 0.126 301.36);
+  --color-chart-5: oklch(66.96% 0.145 12.57);
+}
+
+@layer base {
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --radius-2xl: calc(var(--radius) + 8px);
+  --radius-3xl: calc(var(--radius) + 12px);
+  --radius-4xl: calc(var(--radius) + 16px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+}
+
+:root {
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.129 0.042 264.695);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.129 0.042 264.695);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.129 0.042 264.695);
+  --primary: oklch(0.208 0.042 265.755);
+  --primary-foreground: oklch(0.984 0.003 247.858);
+  --secondary: oklch(0.968 0.007 247.896);
+  --secondary-foreground: oklch(0.208 0.042 265.755);
+  --muted: oklch(0.968 0.007 247.896);
+  --muted-foreground: oklch(0.554 0.046 257.417);
+  --accent: oklch(0.968 0.007 247.896);
+  --accent-foreground: oklch(0.208 0.042 265.755);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.929 0.013 255.508);
+  --input: oklch(0.929 0.013 255.508);
+  --ring: oklch(0.704 0.04 256.788);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.984 0.003 247.858);
+  --sidebar-foreground: oklch(0.129 0.042 264.695);
+  --sidebar-primary: oklch(0.208 0.042 265.755);
+  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-accent: oklch(0.968 0.007 247.896);
+  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
+  --sidebar-border: oklch(0.929 0.013 255.508);
+  --sidebar-ring: oklch(0.704 0.04 256.788);
+}
+
+.dark {
+  --background: oklch(0.129 0.042 264.695);
+  --foreground: oklch(0.984 0.003 247.858);
+  --card: oklch(0.208 0.042 265.755);
+  --card-foreground: oklch(0.984 0.003 247.858);
+  --popover: oklch(0.208 0.042 265.755);
+  --popover-foreground: oklch(0.984 0.003 247.858);
+  --primary: oklch(0.929 0.013 255.508);
+  --primary-foreground: oklch(0.208 0.042 265.755);
+  --secondary: oklch(0.279 0.041 260.031);
+  --secondary-foreground: oklch(0.984 0.003 247.858);
+  --muted: oklch(0.279 0.041 260.031);
+  --muted-foreground: oklch(0.704 0.04 256.788);
+  --accent: oklch(0.279 0.041 260.031);
+  --accent-foreground: oklch(0.984 0.003 247.858);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.551 0.027 264.364);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.208 0.042 265.755);
+  --sidebar-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-accent: oklch(0.279 0.041 260.031);
+  --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.551 0.027 264.364);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
